fix flicker with popup
fix the flicker in the top left corner of screen

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a{
 .chartTitle{
     fill: #f8dc00;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    font-size: 1.55em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
@@ -115,7 +115,7 @@ option{
     background-color: rgba(255, 255, 255, 0.85);
     border: solid thin #fff;
     padding: 5px 10px;
-    top: -75px;
+    top: -100px;
 }
 
 .infolabel h2{
